# AIrDrone_Security

./: README.md
airdrone_actions/: CMakeLists.txt  package.xml
airdrone_actions/action/: Offboard.action  OffboardRequest.action  Setpoint.action  TakePicture.action  TakeVideo.action
airdrone_actions/srv/: EndOffboard.srv  OffboardSession.srv  StartOffboard.srv  StartRecording.srv  StopRecording.srv  TakePicture.srv
airdrone_manager/: CMakeLists.txt  package.xml
airdrone_navigation/: CMakeLists.txt  package.xml
airdrone_navigation/config/: target_detector_params.yaml  visual_tracker_params.yaml
airdrone_navigation/launch/: AIrDroneSecurity.launch.py  Application.launch.py  SystemStartup.launch.py  prova.launch (copy).py  prova.launch.py  visual_tracker.launch.py
airdrone_navigation/models/ADS_models/big_box/: model.sdf
airdrone_navigation/models/ADS_models/iris_fpv_cam/: iris_fpv_cam.sdf
airdrone_navigation/src/Landing/: ads_landing_terminals_commands  changes_by_bala.txt  kalman_filter.h  kalman_filter.hpp  landing_position_filter.cpp  landing_target_detector.cpp  landing_target_detector.h  old_detector.cpp  old_detector.h  target_detector.cpp  target_detector.h  target_detector_new.cpp  target_detector_new.h
airdrone_navigation/src/Landing/LandingFSM/: ConcreteLandState.cpp  ConcreteLandState.h  Land.cpp  Land.h  LandState.h
airdrone_navigation/src/Navigation/: offboard_control_client.cpp  offboard_control_server.cpp  offboard_control_server.h  offboard_manager.cpp  setpoint_publisher.cpp  trajectory_generator.hpp
airdrone_navigation/src/Patrol/: visual_tracking_system.cpp  visual_tracking_system.hpp
airdrone_navigation/src/Utilities/: setpoint_checker.cpp  user_interface.cpp
airdrone_navigation/src/patrol/: visual_tracking_system.hpp
airdrone_navigation/worlds/ADS_worlds/: cafe.world  empty.world  industrial_world.world
camera_manager/: package.xml  setup.cfg  setup.py
camera_manager/camera_manager/: camera_manager_action_client.py  camera_manager_client.py  camera_manager_server.py
fake_camera/: CMakeLists.txt  package.xml
fake_camera/src/: fake_camera_node.cpp
v4l2_camera/: CMakeLists.txt
v4l2_camera/include/v4l2_camera/: backup.cpp  backup.hpp  v4l2_camera.hpp
v4l2_camera/src/: v4l2_camera.cpp
video_io/: package.xml  setup.cfg  setup.py
video_io/video_io/: video_publisher.py  visualize_detections.py
yolo_ros/: package.xml  setup.py
yolo_ros/launch/: yolo.launch.py
yolo_ros/networks/yolo-v4-tiny-608/: saved_model.pb
yolo_ros/networks/yolo-v4-tiny-608/variables/: variables.index
yolo_ros/yolo_ros/: following.py  yolo.py  yolo_node.py
