<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_ros</name>
  <version>0.1.0</version>
  <description>Tensorflow YoloV4 models in ROS2</description>
  <maintainer email="simone.giordani2@studio.unibo.it">Simone Giordani</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
